Codd quality improvements surfaced by IntelliJ.